@@ -1,3 +1,7 @@
+2010-04-30 Homer Xing <homer.xing@gmail.com>
+
+    * Fix problem: Synaptic is not installed on KUbuntu.
+
 2010-04-28 QI Chengjie <starboy.qi@gmail.com>
 
     * Make DBus call persistent in a session
